--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     }
   ],
   "dependencies": {
-    "nconf": "0.6.x"
+    "nconf": "0.6.x",
+    "newrelic": "1.14.1"
   },
   "devDependencies": {},
   "engines": {
